[fix] Fix focused point outline styles on safari in HighPlot and Scatters

--- a/aim/web/ui/src/components/LineChart/LineChart.scss
+++ b/aim/web/ui/src/components/LineChart/LineChart.scss
@@ -37,7 +37,7 @@
       stroke-width: 2;
       clip-path: unset;
       &__shadow {
-        stroke-width: 8;
+        stroke-width: 10;
       }
     }
     /* on hover */
